--- a/css/NP_Stylesheet.css
+++ b/css/NP_Stylesheet.css
@@ -1,3 +1,6 @@
+/*We'll need a flexbox somewhere*/
+
+
 /* This rule removes the margin at the top of the body, and aligns content to the center */
 body{ 
 	margin-top:0px;/*top margin is 0*/
