--- a/css/NP_Stylesheet.css
+++ b/css/NP_Stylesheet.css
@@ -1,3 +1,5 @@
+/* Testing */
+
 /* This rule removes the margin at the top of the body, and aligns content to the center */
 body{ 
 	margin-top:0px;/*top margin is 0*/
@@ -106,6 +108,8 @@ footer {
 	left: 0;
 	width: 100%;
 	background: lightgreen /* #222 */;
+	
+	
 }
 
 
@@ -119,6 +123,7 @@ footer div {
 	
 footer div section {
 	display: table-cell;
+	
 	width: 300px;
 		}
 		
